--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node" : "16.16.0"
+    "node": "16.16.0"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.3.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "lodash": "^4.17.21",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.11.2"
   }
 }
